Finished CSS styling Header                                       I finished tsyling the header with CSS. It looks pretty close to a level that I am happy with. I also deleted an extra index.html outside of the folder.

--- a/Landing-Page-main/index.html
+++ b/Landing-Page-main/index.html
@@ -7,25 +7,30 @@
     </head>
     <body>
         <header>
-            <h1 class="headerLogoText">Header Logo</h1>
-            <nav>
-                <ul>
-                    <li><a class="secondaryText" href="#">Header link one</a></li>
-                    <li><a class="secondaryText" href="#">Header link two</a></li>
-                    <li><a class="secondaryText" href="#">Header link three</a></li>
-                </ul>
-            </nav>
+           <section id="headerTopSection">
+                <h1 class="headerLogoText">Header Logo</h1>
+                <nav>
+                    <ul>
+                        <li><a class="secondaryText" href="#">Header link one</a></li>
+                        <li><a class="secondaryText" href="#">Header link two</a></li>
+                        <li><a class="secondaryText" href="#">Header link three</a></li>
+                    </ul>
+                </nav>
+            </section>
+            <section id="headerBottomSection">
+                <section>
+                    <h1 class = "mainText">This website is <br>
+                        awesome</h1>
+                    <p class="secodaryText">This website has some subtext that goes here under the<br>
+                         main title. It's a smaller font and the color is lower<br>
+                        contrast.</p>
+                    <button class="buttonAndAction"><a href="#">Sign up</a></button>
+                </section>
+                <section>
+                    <img id="headerImage" url="#" alt="This is a placeholder for an image.">
+                </section>
+            </section>
         </header>
-        <main>
-            <section>
-                <h1 class = "mainText">This website is awesome</h1>
-                <p class="secodaryText">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button class="buttonAndAction"><a href="#">Sign up</a></button>
-            </section>
-            <section>
-                <img url="http://placekitten.com/g/400/400" alt="A picture of kitties">
-            </section>
-        </main>
         <section>
             <h3 class="informationHeaderText">Some random information.</h3>
             <img src="#" alt="Blank photo boxes">
