--- a/Landing-Page-main/index.html
+++ b/Landing-Page-main/index.html
@@ -31,16 +31,30 @@
                 </section>
             </section>
         </header>
-        <section>
-            <h3 class="informationHeaderText">Some random information.</h3>
-            <img src="#" alt="Blank photo boxes">
-            <img src="#" alt="Blank photo boxes">
-            <img src="#" alt="Blank photo boxes">
-            <img src="#" alt="Blank photo boxes">
-            <p>this is some subtext under an illustration or image</p>
-            <p>this is some subtext under an illustration or image</p>
-            <p>this is some subtext under an illustration or image</p>
-            <p>this is some subtext under an illustration or image</p>
+        <section id="mainBodySection">
+            <section id="mainSubsection1">
+                <h3 class="informationHeaderText">Some random information.</h3>
+            </section>
+            <section id="mainSubsection2">
+                <img src="#" alt="Blank photo boxes">
+                <img src="#" alt="Blank photo boxes">
+                <img src="#" alt="Blank photo boxes">
+                <img src="#" alt="Blank photo boxes">
+            </section>
+            <section id="mainSubsection3">
+                <p>this is some subtext<br>
+                     under an illustration<br>
+                      or image</p>
+                <p>this is some subtext<br>
+                     under an illustration<br>
+                      or image</p>
+                <p>this is some subtext<br>
+                     under an illustration<br>
+                      or image</p>
+                <p>this is some subtext<br>
+                     under an illustration<br>
+                      or image</p>
+            </section>
         </section>
         <section class="quoteSection">
             <p class="quoteText">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
