Finished styling blue action section.

--- a/Landing-Page-main/index.html
+++ b/Landing-Page-main/index.html
@@ -24,7 +24,7 @@
                     <p class="secodaryText">This website has some subtext that goes here under the<br>
                          main title. It's a smaller font and the color is lower<br>
                         contrast.</p>
-                    <button class="buttonAndAction"><a href="#">Sign up</a></button>
+                    <button id="headerButton"><a href="#">Sign up</a></button>
                 </section>
                 <section>
                     <img id="headerImage" url="#" alt="This is a placeholder for an image.">
@@ -61,9 +61,13 @@
             <span>- Thor, God of Thunder</span>
         </section>
         <section class="buttonAndAction">
-            <h4>Call to action! It's time!</h4>
-            <button class="buttonAndAction"><a href="#">Sign up</a></button>
-            <p>Sign up for our product by clicking that button right over there.</p>
+            <section>
+                <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            </section>
+            <section>
+                <button class="buttonAndAction"><a href="#">Sign up</a></button>
+            </section>
         </section>
         <footer>
             <p>Copyright The Odin Project 2021</p>
